--- a/dpkg/rules
+++ b/dpkg/rules
@@ -7,80 +7,90 @@
 # This has to be exported to make some magic below work.
 export DH_OPTIONS
 
-PYTHON_PACKAGE_DIR=$(shell python -c "import distutils.sysconfig;print distutils.sysconfig.get_python_lib(True) ")
-
-
 %:
 	dh  $@
 
-install_libmsiecf:
-	# Set up libmsiecf package directories and files
-	mkdir -p debian/libmsiecf/usr/lib
-	install -p -m755 debian/tmp/usr/lib/lib*.so.*.*.* debian/libmsiecf/usr/lib
-
-install_libmsiecf_dev:
-	# Set up libmsiecf-dev package directories and files
-	mkdir -p debian/libmsiecf-dev/usr/include
-	mkdir -p debian/libmsiecf-dev/usr/include/libmsiecf
-	mkdir -p debian/libmsiecf-dev/usr/lib
-	mkdir -p debian/libmsiecf-dev/usr/lib/pkgconfig
-	mkdir -p debian/libmsiecf-dev/usr/share/man/man3
-	install -p -m755 debian/tmp/usr/include/*.h debian/libmsiecf-dev/usr/include
-	install -p -m755 debian/tmp/usr/include/libmsiecf/*.h debian/libmsiecf-dev/usr/include/libmsiecf
-	install -p -m755 debian/tmp/usr/lib/*.la debian/libmsiecf-dev/usr/lib
-	install -p -m755 debian/tmp/usr/lib/lib*.a debian/libmsiecf-dev/usr/lib
-	install -p -m755 debian/tmp/usr/lib/lib*.so debian/libmsiecf-dev/usr/lib
-	install -p -m755 debian/tmp/usr/lib/pkgconfig/* debian/libmsiecf-dev/usr/lib/pkgconfig
-	install -p -m755 debian/tmp/usr/share/man/man3/* debian/libmsiecf-dev/usr/share/man/man3
-
-install_libmsiecf_tools:
-	# Set up libmsiecf-tools package directories and files
-	mkdir -p debian/libmsiecf-tools/usr/bin
-	mkdir -p debian/libmsiecf-tools/usr/share/man/man1
-	install -p -m755 debian/tmp/usr/bin/* debian/libmsiecf-tools/usr/bin
-	install -p -m755 debian/tmp/usr/share/man/man1/* debian/libmsiecf-tools/usr/share/man/man1
-
-install_libmsiecf_python:
-	# Set up libmsiecf-python package directories and files
-	mkdir -p debian/libmsiecf-python/$(PYTHON_PACKAGE_DIR)
-	install -p -m775 debian/tmp$(PYTHON_PACKAGE_DIR)/pymsiecf.* debian/libmsiecf-python$(PYTHON_PACKAGE_DIR)
-
+.PHONY: override_dh_auto_configure
 override_dh_auto_configure:
-	dh_auto_configure -- --enable-python
+	dh_auto_configure -- --enable-python CFLAGS="-g"
 
+.PHONY: override_dh_auto_test
 override_dh_auto_test:
 
-override_dh_installinit: install_libmsiecf install_libmsiecf_dev install_libmsiecf_tools install_libmsiecf_python
+.PHONY: override_dh_install
+override_dh_install:
+	# Create the libmsiecf package.
+	dh_install "debian/tmp/usr/lib/lib*.so.*.*.*" -p libmsiecf
+	# Create the libmsiecf-dev package.
+	dh_install "debian/tmp/usr/include/*.h" -p libmsiecf-dev
+	dh_install "debian/tmp/usr/include/lib*/*.h" -p libmsiecf-dev
+	dh_install "debian/tmp/usr/lib/*.a" -p libmsiecf-dev
+	dh_install "debian/tmp/usr/lib/*.la" -p libmsiecf-dev
+	dh_install "debian/tmp/usr/lib/*.so" -p libmsiecf-dev
+	dh_install "debian/tmp/usr/lib/pkgconfig/*" -p libmsiecf-dev
+	dh_install "debian/tmp/usr/share/man/man3/*" -p libmsiecf-dev
+	# Create the libmsiecf-tools package.
+	dh_install "debian/tmp/usr/bin/*" -p libmsiecf-tools
+	dh_install "debian/tmp/usr/share/man/man1/*" -p libmsiecf-tools
+	# Create the libmsiecf-python package.
+	dh_install -X"*_d.so" "debian/tmp/usr/lib/python*/*" -p libmsiecf-python
+	# The libmsiecf-dbg and libmsiecf-python-dbg packages are created by dh_strip.
+	dh_install
 
+.PHONY: override_dh_installmenu
 override_dh_installmenu:
 
+.PHONY: override_dh_installmime
 override_dh_installmime:
 
+.PHONY: override_dh_installmodules
 override_dh_installmodules:
 
+.PHONY: override_dh_installlogcheck
 override_dh_installlogcheck:
 
+.PHONY: override_dh_installlogrotate
 override_dh_installlogrotate:
 
+.PHONY: override_dh_installpam
 override_dh_installpam:
 
+.PHONY: override_dh_installppp
 override_dh_installppp:
 
+.PHONY: override_dh_installudev
 override_dh_installudev:
 
+.PHONY: override_dh_installwm
 override_dh_installwm:
 
+.PHONY: override_dh_installxfonts
 override_dh_installxfonts:
 
+.PHONY: override_dh_gconf
 override_dh_gconf:
 
+.PHONY: override_dh_icons
 override_dh_icons:
 
+.PHONY: override_dh_perl
 override_dh_perl:
 
+.PHONY: override_dh_pysupport
+override_dh_pysupport:
+
+.PHONY: override_dh_strip
+override_dh_strip:
+ifeq (,$(filter nostrip,$(DEB_BUILD_OPTIONS)))
+	dh_strip -plibmsiecf --dbg-package=libmsiecf-dbg
+	dh_strip -plibmsiecf-python --dbg-package=libmsiecf-python-dbg
+endif
+
+.PHONY: override_dh_shlibdeps
 override_dh_shlibdeps:
 	dh_shlibdeps -Llibmsiecf -l${PWD}/debian/tmp/usr/lib
 
+.PHONY: override_dh_makeshlibs
 override_dh_makeshlibs:
 	dh_makeshlibs -Xlibmsiecf-dev
 
