Small changes to wiki configuration file.

--- a/libmsiecf-wiki.ini
+++ b/libmsiecf-wiki.ini
@@ -15,7 +15,7 @@ url: "https://code.google.com/p/libmsiecf/"
 
 [tests]
 features: ["valgrind"]
-profiles: ["libmsiecf", "pymsiecf", "msiecfinfo"]
+profiles: ["libmsiecf", "pymsiecf", "msiecfexport", "msiecfinfo"]
 example_filename1: "index.dat"
 example_filename2: "index2.dat"
 
