--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 # Files to ignore by git
 #
-# Version: 20130922
+# Version: 20141014
 
 # Generic auto-generated build files
 *~
 *.a
 *.la
 *.lai
+*.lineno
 *.lo
 *.Plo
 *.Po
@@ -26,6 +27,7 @@ stamp-h1
 /ABOUT-NLS
 /aclocal.m4
 /autom4te.cache/
+/compile
 /config.guess
 /config.log
 /config.rpath
@@ -37,6 +39,7 @@ stamp-h1
 /libtool
 /ltmain.sh
 /missing
+/test-driver
 /ylwrap
 /m4/codeset.m4
 /m4/fcntl-o.m4
@@ -107,6 +110,7 @@ stamp-h1
 /tests/input
 /tests/msiecf_test_open_close
 /tests/msiecf_test_set_ascii_codepage
+/tests/tmp
 
 # Local library dependencies specific files
 /libbfio
@@ -117,6 +121,8 @@ stamp-h1
 /libcnotify
 /libcpath
 /libcsplit
+/libcstring
+/libcsystem
 /libcthreads
 /libfdatetime
 /libfguid
