--- a/libmsiecf-wiki.ini
+++ b/libmsiecf-wiki.ini
@@ -27,10 +27,12 @@ example_filename2: "index2.dat"
 directory: "msiecftools"
 names: ["msiecfexport", "msiecfinfo"]
 
+[troubleshooting]
+example: "msiecfinfo index.dat"
+
 [cygwin]
 build_dependencies: []
-dll_dependencies: [
-    "*TODO describe dependencies*"]
+dll_dependencies: []
 dll_filename: "cygmsiecf-0.dll"
 
 [gcc]
@@ -39,8 +41,7 @@ static_build_dependencies: []
 
 [mingw]
 build_dependencies: []
-dll_dependencies: [
-    "*TODO describe dependencies*"]
+dll_dependencies: []
 dll_filename: "libmsiecf-1.dll"
 
 [msvscpp]
