--- a/libmsiecf-wiki.ini
+++ b/libmsiecf-wiki.ini
@@ -7,11 +7,15 @@ features: [
     "cygwin", "gcc", "mingw", "msvscpp",
     "dpkg", "rpm"]
 
-[source_package]
+[documentation]
 url: "https://googledrive.com/host/0B3fBvzttpiiSVm1MNkw5cU1mUG8/"
+
+[source_package]
+url: "https://github.com/libyal/libmsiecf/releases"
 
 [git]
 url: "https://github.com/libyal/libmsiecf.git"
+build_dependencies: []
 
 [development]
 main_object: "file"
