--- a/msvscpp/pymsiecf/pymsiecf.vcproj
+++ b/msvscpp/pymsiecf/pymsiecf.vcproj
@@ -174,6 +174,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\pymsiecf\pymsiecf_cache_directories.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\pymsiecf\pymsiecf_codepage.c"
 				>
 			</File>
@@ -237,6 +241,10 @@
 			>
 			<File
 				RelativePath="..\..\pymsiecf\pymsiecf.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\pymsiecf\pymsiecf_cache_directories.h"
 				>
 			</File>
 			<File
