--- a/libmsiecf-wiki.ini
+++ b/libmsiecf-wiki.ini
@@ -8,7 +8,7 @@ features: [
     "dpkg", "rpm"]
 
 [documentation]
-url: "https://googledrive.com/host/0B3fBvzttpiiSVm1MNkw5cU1mUG8/"
+url: "https://github.com/libyal/libmsiecf/tree/master/documentation"
 
 [source_package]
 url: "https://github.com/libyal/libmsiecf/releases"
