--- a/configure.ac
+++ b/configure.ac
@@ -115,7 +115,10 @@ dnl Check if libmsiecf should be build with debug output
 AX_COMMON_CHECK_ENABLE_DEBUG_OUTPUT
 
 dnl Check if libmsiecf python bindings (pymsiecf) should be build
+AX_PYTHON_CHECK_PYPREFIX
 AX_PYTHON_CHECK_ENABLE
+AX_PYTHON2_CHECK_ENABLE
+AX_PYTHON3_CHECK_ENABLE
 
 dnl Headers included in various places
 AC_CHECK_HEADERS([stdarg.h varargs.h])
@@ -209,6 +212,8 @@ AC_CONFIG_FILES([libmsiecf/Makefile])
 AC_CONFIG_FILES([libcsystem/Makefile])
 AC_CONFIG_FILES([msiecftools/Makefile])
 AC_CONFIG_FILES([pymsiecf/Makefile])
+AC_CONFIG_FILES([pymsiecf2/Makefile])
+AC_CONFIG_FILES([pymsiecf3/Makefile])
 AC_CONFIG_FILES([po/Makefile.in])
 AC_CONFIG_FILES([po/Makevars])
 AC_CONFIG_FILES([manuals/Makefile])
@@ -257,6 +262,8 @@ Features:
    Wide character type support:                 $ac_cv_enable_wide_character_type
    msiecftools are build as static executables: $ac_cv_enable_static_executables
    Python (pymsiecf) support:                   $ac_cv_enable_python
+   Python version 2 (pymsiecf) support:         $ac_cv_enable_python2
+   Python version 3 (pymsiecf) support:         $ac_cv_enable_python3
    Verbose output:                              $ac_cv_enable_verbose_output
    Debug output:                                $ac_cv_enable_debug_output
 ]);
