--- a/configure.ac
+++ b/configure.ac
@@ -212,8 +212,8 @@ AC_CONFIG_FILES([libmsiecf/Makefile])
 AC_CONFIG_FILES([libcsystem/Makefile])
 AC_CONFIG_FILES([msiecftools/Makefile])
 AC_CONFIG_FILES([pymsiecf/Makefile])
-AC_CONFIG_FILES([pymsiecf2/Makefile])
-AC_CONFIG_FILES([pymsiecf3/Makefile])
+AC_CONFIG_FILES([pymsiecf-python2/Makefile])
+AC_CONFIG_FILES([pymsiecf-python3/Makefile])
 AC_CONFIG_FILES([po/Makefile.in])
 AC_CONFIG_FILES([po/Makevars])
 AC_CONFIG_FILES([manuals/Makefile])
