--- a/.gitignore
+++ b/.gitignore
@@ -113,7 +113,7 @@ stamp-h[1-9]
 /include/libmsiecf/types.h
 /libmsiecf/libmsiecf.rc
 /libmsiecf/libmsiecf_definitions.h
-/pymsiecf[23]/*.[ch]
+/pymsiecf-python[23]/*.[ch]
 /msiecftools/msiecfexport
 /msiecftools/msiecfinfo
 /tests/input
