--- a/libmsiecf.ini
+++ b/libmsiecf.ini
@@ -1,20 +1,15 @@
-[Project]
+[project]
 name: "libmsiecf"
 status: "alpha"
-features: [
-    "debug_output", "tests", "tools", "python",
-    "git", "source_package",
-    "cygwin", "gcc", "mingw", "msvscpp",
-    "dpkg", "rpm"]
+authors: ["Joachim Metz <joachim.metz@gmail.com>"]
+year_of_creation: "2009"
+documentation_url: "https://github.com/libyal/libmsiecf/tree/master/documentation"
+download_url: "https://github.com/libyal/libmsiecf/releases"
+git_url: "https://github.com/libyal/libmsiecf.git"
+features: ["debug_output", "python"]
 
-[documentation]
-url: "https://github.com/libyal/libmsiecf/tree/master/documentation"
-
-[source_package]
-url: "https://github.com/libyal/libmsiecf/releases"
-
-[git]
-url: "https://github.com/libyal/libmsiecf.git"
+[library]
+description: "Library to access the MSIE Cache File (index.dat) format"
 build_dependencies: []
 
 [development]
