Worked on tests.

--- a/.gitignore
+++ b/.gitignore
@@ -120,6 +120,7 @@ stamp-h[1-9]
 /msiecftools/msiecfexport
 /msiecftools/msiecfinfo
 /tests/input
+/tests/msiecf_test_get_version
 /tests/msiecf_test_open_close
 /tests/msiecf_test_set_ascii_codepage
 /tests/tmp*
