--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -17,24 +17,25 @@ AM_CPPFLAGS = \
 
 if HAVE_PYTHON_TESTS
 TESTS_PYMSIECF = \
-	test_pymsiecf_set_ascii_codepage.sh \
-	test_pymsiecf_open_close.sh
+	test_python_functions.sh \
+	test_pymsiecf_set_ascii_codepage.sh
 endif
 
 TESTS = \
+	test_api_functions.sh \
 	test_set_ascii_codepage.sh \
-	test_open_close.sh \
 	test_msiecfinfo.sh \
 	test_msiecfexport.sh \
 	$(TESTS_PYMSIECF)
 
 check_SCRIPTS = \
+	pymsiecf_test_get_version.py \
 	pymsiecf_test_open_close.py \
 	pymsiecf_test_set_ascii_codepage.py \
+	test_api_functions.sh \
 	test_msiecfexport.sh \
 	test_msiecfinfo.sh \
-	test_open_close.sh \
-	test_pymsiecf_open_close.sh \
+	test_python_functions.sh \
 	test_pymsiecf_set_ascii_codepage.sh \
 	test_runner.sh \
 	test_set_ascii_codepage.sh
@@ -43,8 +44,19 @@ EXTRA_DIST = \
 	$(check_SCRIPTS)
 
 check_PROGRAMS = \
+	msiecf_test_get_version \
 	msiecf_test_open_close \
 	msiecf_test_set_ascii_codepage
+
+msiecf_test_get_version_SOURCES = \
+	msiecf_test_get_version.c \
+	msiecf_test_libcstring.h \
+	msiecf_test_libmsiecf.h \
+	msiecf_test_unused.h
+
+msiecf_test_get_version_LDADD = \
+	../libmsiecf/libmsiecf.la \
+	@LIBCSTRING_LIBADD@
 
 msiecf_test_open_close_SOURCES = \
 	msiecf_test_libcerror.h \
