--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,5 @@ install:
 script:
   - if test `uname -s` = 'Linux'; then export PATH=$(echo $PATH | tr ":" "\n" | sed '/\/opt\/python/d' | tr "\n" ":" | sed "s/::/:/g"); fi
   - ./runtests.sh
+after_success:
+  - if test `uname -s` = 'Linux' && test "$CC" = "gcc"; then curl -o codecov.sh -s https://codecov.io/bash && /bin/bash ./codecov.sh; fi
