--- a/msvscpp/msiecf_test_error/msiecf_test_error.vcproj
+++ b/msvscpp/msiecf_test_error/msiecf_test_error.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
-	Name="msiecf_test_get_version"
-	ProjectGUID="{5C270973-B243-49D3-A9CE-F8795DC857B3}"
-	RootNamespace="msiecf_test_get_version"
+	Name="msiecf_test_error"
+	ProjectGUID="{613A110E-1831-45DA-B434-7B4F2C884EE5}"
+	RootNamespace="msiecf_test_error"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="131072"
 	>
@@ -176,7 +176,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\tests\msiecf_test_get_version.c"
+				RelativePath="..\..\tests\msiecf_test_error.c"
 				>
 			</File>
 		</Filter>
