--- a/libmsiecf.pc.in
+++ b/libmsiecf.pc.in
@@ -4,9 +4,9 @@ libdir=@libdir@
 includedir=@includedir@
 
 Name: libmsiecf
-Description: Library to access the MSIE Cache File (index.dat) format.
+Description: Library to access the MSIE Cache File (index.dat) format
 Version: @VERSION@
 Libs: -L${libdir} -lmsiecf
-Libs.private: @ax_libbfio_pc_libs_private@ @ax_libcdata_pc_libs_private@ @ax_libcerror_pc_libs_private@ @ax_libcfile_pc_libs_private@ @ax_libclocale_pc_libs_private@ @ax_libcnotify_pc_libs_private@ @ax_libcpath_pc_libs_private@ @ax_libcsplit_pc_libs_private@ @ax_libcstring_pc_libs_private@ @ax_libcthreads_pc_libs_private@ @ax_libfdatetime_pc_libs_private@ @ax_libfguid_pc_libs_private@ @ax_libfole_pc_libs_private@ @ax_libfvalue_pc_libs_private@ @ax_libuna_pc_libs_private@ @ax_pthread_pc_libs_private@
+Libs.private: @ax_libbfio_pc_libs_private@ @ax_libcdata_pc_libs_private@ @ax_libcerror_pc_libs_private@ @ax_libcfile_pc_libs_private@ @ax_libclocale_pc_libs_private@ @ax_libcnotify_pc_libs_private@ @ax_libcpath_pc_libs_private@ @ax_libcsplit_pc_libs_private@ @ax_libcstring_pc_libs_private@ @ax_libfdatetime_pc_libs_private@ @ax_libfguid_pc_libs_private@ @ax_libfole_pc_libs_private@ @ax_libfvalue_pc_libs_private@ @ax_libuna_pc_libs_private@
 Cflags: -I${includedir}
 
