--- a/libmsiecf.ini
+++ b/libmsiecf.ini
@@ -10,6 +10,7 @@ features: ["debug_output", "python"]
 
 [library]
 description: "Library to access the MSIE Cache File (index.dat) format"
+public_types: ["file", "item"]
 build_dependencies: []
 
 [development]
