--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,7 +1,6 @@
 AM_CPPFLAGS = \
 	-I$(top_srcdir)/include \
 	-I$(top_srcdir)/common \
-	@LIBCSTRING_CPPFLAGS@ \
 	@LIBCERROR_CPPFLAGS@ \
 	@LIBCDATA_CPPFLAGS@ \
 	@LIBCLOCALE_CPPFLAGS@ \
@@ -23,7 +22,7 @@ endif
 
 TESTS = \
 	test_api_functions.sh \
-	test_set_ascii_codepage.sh \
+	test_api_types.sh \
 	test_msiecfinfo.sh \
 	test_msiecfexport.sh \
 	$(TESTS_PYMSIECF)
@@ -33,48 +32,66 @@ check_SCRIPTS = \
 	pymsiecf_test_open_close.py \
 	pymsiecf_test_set_ascii_codepage.py \
 	test_api_functions.sh \
+	test_api_types.sh \
 	test_msiecfexport.sh \
 	test_msiecfinfo.sh \
 	test_pymsiecf_set_ascii_codepage.sh \
 	test_python_functions.sh \
-	test_runner.sh \
-	test_set_ascii_codepage.sh
+	test_runner.sh
 
 EXTRA_DIST = \
 	$(check_SCRIPTS)
 
 check_PROGRAMS = \
 	msiecf_test_error \
-	msiecf_test_get_version \
+	msiecf_test_file \
+	msiecf_test_item \
 	msiecf_test_open_close \
-	msiecf_test_set_ascii_codepage
+	msiecf_test_support
 
 msiecf_test_error_SOURCES = \
 	msiecf_test_error.c \
-	msiecf_test_libcstring.h \
 	msiecf_test_libmsiecf.h \
 	msiecf_test_macros.h \
 	msiecf_test_unused.h
 
 msiecf_test_error_LDADD = \
-	../libmsiecf/libmsiecf.la \
-	@LIBCSTRING_LIBADD@
+	../libmsiecf/libmsiecf.la
 
-msiecf_test_get_version_SOURCES = \
-	msiecf_test_get_version.c \
-	msiecf_test_libcstring.h \
+msiecf_test_file_SOURCES = \
+	msiecf_test_file.c \
+	msiecf_test_libcerror.h \
+	msiecf_test_libclocale.h \
+	msiecf_test_libcsystem.h \
 	msiecf_test_libmsiecf.h \
-	msiecf_test_macros.h \
+	msiecf_test_libuna.h \
+	msiecf_test_memory.c msiecf_test_memory.h \
 	msiecf_test_unused.h
 
-msiecf_test_get_version_LDADD = \
+msiecf_test_file_LDADD = \
+	@LIBCSYSTEM_LIBADD@ \
+	@LIBUNA_LIBADD@ \
+	@LIBCNOTIFY_LIBADD@ \
+	@LIBCLOCALE_LIBADD@ \
+	@LIBCDATA_LIBADD@ \
 	../libmsiecf/libmsiecf.la \
-	@LIBCSTRING_LIBADD@
+	@LIBCERROR_LIBADD@
+
+msiecf_test_item_SOURCES = \
+	msiecf_test_item.c \
+	msiecf_test_libcerror.h \
+	msiecf_test_libmsiecf.h \
+	msiecf_test_macros.h \
+	msiecf_test_memory.c msiecf_test_memory.h \
+	msiecf_test_unused.h
+
+msiecf_test_item_LDADD = \
+	../libmsiecf/libmsiecf.la \
+	@LIBCERROR_LIBADD@
 
 msiecf_test_open_close_SOURCES = \
 	msiecf_test_libcerror.h \
 	msiecf_test_libmsiecf.h \
-	msiecf_test_libcstring.h \
 	msiecf_test_libcsystem.h \
 	msiecf_test_open_close.c
 
@@ -82,22 +99,27 @@ msiecf_test_open_close_LDADD = \
 	@LIBCSYSTEM_LIBADD@ \
 	../libmsiecf/libmsiecf.la \
 	@LIBCTHREADS_LIBADD@ \
-	@LIBCERROR_LIBADD@ \
-	@LIBCSTRING_LIBADD@ \
+	@LIBCERROR_LIBADD@
 	@PTHREAD_LIBADD@
 
-msiecf_test_set_ascii_codepage_SOURCES = \
+msiecf_test_support_SOURCES = \
 	msiecf_test_libcerror.h \
 	msiecf_test_libclocale.h \
+	msiecf_test_libcsystem.h \
 	msiecf_test_libmsiecf.h \
-	msiecf_test_libcstring.h \
-	msiecf_test_set_ascii_codepage.c
+	msiecf_test_libuna.h \
+	msiecf_test_macros.h \
+	msiecf_test_support.c \
+	msiecf_test_unused.h
 
-msiecf_test_set_ascii_codepage_LDADD = \
-	../libmsiecf/libmsiecf.la \
+msiecf_test_support_LDADD = \
+	@LIBCSYSTEM_LIBADD@ \
+	@LIBUNA_LIBADD@ \
+	@LIBCNOTIFY_LIBADD@ \
 	@LIBCLOCALE_LIBADD@ \
-	@LIBCERROR_LIBADD@ \
-	@LIBCSTRING_LIBADD@
+	@LIBCDATA_LIBADD@ \
+	../libmsiecf/libmsiecf.la \
+	@LIBCERROR_LIBADD@
 
 MAINTAINERCLEANFILES = \
 	Makefile.in
