--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Files to ignore by git
 #
-# Version: 20160507
+# Version: 20161030
 
 # Generic auto-generated build files
 *~
@@ -57,6 +57,7 @@ stamp-h[1-9]
 /test-driver
 /ylwrap
 /m4/codeset.m4
+/m4/extern-inline.m4
 /m4/fcntl-o.m4
 /m4/gettext.m4
 /m4/glibc2.m4
@@ -124,9 +125,10 @@ stamp-h[1-9]
 /msiecftools/msiecfinfo
 /tests/input
 /tests/msiecf_test_error
-/tests/msiecf_test_get_version
+/tests/msiecf_test_file
+/tests/msiecf_test_item
 /tests/msiecf_test_open_close
-/tests/msiecf_test_set_ascii_codepage
+/tests/msiecf_test_support
 /tests/tmp*
 
 # Local library dependencies specific files
@@ -138,7 +140,6 @@ stamp-h[1-9]
 /libcnotify
 /libcpath
 /libcsplit
-/libcstring
 /libcsystem
 /libcthreads
 /libfdatetime
