Worked on Python bindings

--- a/include/libmsiecf.h.in
+++ b/include/libmsiecf.h.in
@@ -439,27 +439,27 @@ int libmsiecf_url_get_type(
      libmsiecf_error_t **error );
 
 /* Retrieves the primary time
- * The returned time is a 64-bit version of a filetime value
+ * The returned time is a 64-bit version of a FILETIME value
  * Returns 1 if successful or -1 on error
  */
 LIBMSIECF_EXTERN \
 int libmsiecf_url_get_primary_time(
      libmsiecf_item_t *url,
-     uint64_t *primary_time,
+     uint64_t *filetime,
      libmsiecf_error_t **error );
 
 /* Retrieves the secondary time
- * The returned time is a 64-bit version of a filetime value
+ * The returned time is a 64-bit version of a FILETIME value
  * Returns 1 if successful or -1 on error
  */
 LIBMSIECF_EXTERN \
 int libmsiecf_url_get_secondary_time(
      libmsiecf_item_t *url,
-     uint64_t *secondary_time,
+     uint64_t *filetime,
      libmsiecf_error_t **error );
 
 /* Retrieves the expiration time
- * The returned time is a 64-bit version of a filetime value in format version 4.7
+ * The returned time is a 64-bit version of a FILETIME value in format version 4.7
  * The returned time is a 32-bit version of a FAT date time value in format version 5.2
  * Returns 1 if successful or -1 on error
  */
