--- a/libmsiecf/Makefile.am
+++ b/libmsiecf/Makefile.am
@@ -13,7 +13,8 @@ AM_CPPFLAGS = \
 	@LIBFDATETIME_CPPFLAGS@ \
 	@LIBFGUID_CPPFLAGS@ \
 	@LIBFOLE_CPPFLAGS@ \
-	@LIBFVALUE_CPPFLAGS@
+	@LIBFVALUE_CPPFLAGS@ \
+	@PTHREAD_CPPFLAGS@
 
 lib_LTLIBRARIES = libmsiecf.la
 
@@ -72,7 +73,8 @@ libmsiecf_la_LIBADD = \
 	@LIBFDATETIME_LIBADD@ \
 	@LIBFGUID_LIBADD@ \
 	@LIBFOLE_LIBADD@ \
-	@LIBFVALUE_LIBADD@
+	@LIBFVALUE_LIBADD@ \
+	@PTHREAD_LIBADD@
 
 libmsiecf_la_LDFLAGS = -no-undefined -version-info 1:0:0
 
