Worked on Python bindings

--- a/include/libmsiecf.h.in
+++ b/include/libmsiecf.h.in
@@ -333,8 +333,8 @@ LIBMSIECF_EXTERN \
 int libmsiecf_file_get_cache_directory_name(
      libmsiecf_file_t *file,
      int cache_directory_index,
-     char *cache_directory_name,
-     size_t cache_directory_name_size,
+     char *string,
+     size_t string_size,
      libmsiecf_error_t **error );
 
 /* Retrieves the number of items
