--- a/msvscpp/Makefile.am
+++ b/msvscpp/Makefile.am
@@ -21,11 +21,14 @@ MSVSCPP_FILES = \
 	msiecf_test_io_handle/msiecf_test_io_handle.vcproj \
 	msiecf_test_item/msiecf_test_item.vcproj \
 	msiecf_test_item_descriptor/msiecf_test_item_descriptor.vcproj \
+	msiecf_test_leak/msiecf_test_leak.vcproj \
 	msiecf_test_leak_values/msiecf_test_leak_values.vcproj \
 	msiecf_test_notify/msiecf_test_notify.vcproj \
 	msiecf_test_property_type/msiecf_test_property_type.vcproj \
+	msiecf_test_redirected/msiecf_test_redirected.vcproj \
 	msiecf_test_redirected_values/msiecf_test_redirected_values.vcproj \
 	msiecf_test_support/msiecf_test_support.vcproj \
+	msiecf_test_url/msiecf_test_url.vcproj \
 	msiecf_test_url_values/msiecf_test_url_values.vcproj \
 	msiecfexport/msiecfexport.vcproj \
 	msiecfinfo/msiecfinfo.vcproj \
