--- a/msvscpp/msiecfinfo/msiecfinfo.vcproj
+++ b/msvscpp/msiecfinfo/msiecfinfo.vcproj
@@ -41,8 +41,8 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\libcerror;..\..\libcdata;..\..\libclocale;..\..\libcnotify;..\..\libuna;..\..\libcfile;..\..\libcpath;..\..\libbfio;..\..\libfdatetime;..\..\libcsystem"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBCERROR;HAVE_LOCAL_LIBCDATA;HAVE_LOCAL_LIBCLOCALE;HAVE_LOCAL_LIBCNOTIFY;HAVE_LOCAL_LIBUNA;HAVE_LOCAL_LIBCFILE;HAVE_LOCAL_LIBCPATH;HAVE_LOCAL_LIBBFIO;HAVE_LOCAL_LIBFDATETIME;HAVE_LOCAL_LIBCSYSTEM;LIBMSIECF_DLL_IMPORT"
+				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\libcerror;..\..\libcdata;..\..\libclocale;..\..\libcnotify;..\..\libuna;..\..\libcfile;..\..\libcpath;..\..\libbfio;..\..\libfdatetime"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBCERROR;HAVE_LOCAL_LIBCDATA;HAVE_LOCAL_LIBCLOCALE;HAVE_LOCAL_LIBCNOTIFY;HAVE_LOCAL_LIBUNA;HAVE_LOCAL_LIBCFILE;HAVE_LOCAL_LIBCPATH;HAVE_LOCAL_LIBBFIO;HAVE_LOCAL_LIBFDATETIME;LIBMSIECF_DLL_IMPORT"
 				RuntimeLibrary="2"
 				WarningLevel="4"
 				CompileAs="1"
@@ -114,8 +114,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\libcerror;..\..\libcdata;..\..\libclocale;..\..\libcnotify;..\..\libuna;..\..\libcfile;..\..\libcpath;..\..\libbfio;..\..\libfdatetime;..\..\libcsystem"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBCERROR;HAVE_LOCAL_LIBCDATA;HAVE_LOCAL_LIBCLOCALE;HAVE_LOCAL_LIBCNOTIFY;HAVE_LOCAL_LIBUNA;HAVE_LOCAL_LIBCFILE;HAVE_LOCAL_LIBCPATH;HAVE_LOCAL_LIBBFIO;HAVE_LOCAL_LIBFDATETIME;HAVE_LOCAL_LIBCSYSTEM;LIBMSIECF_DLL_IMPORT"
+				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\libcerror;..\..\libcdata;..\..\libclocale;..\..\libcnotify;..\..\libuna;..\..\libcfile;..\..\libcpath;..\..\libbfio;..\..\libfdatetime"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBCERROR;HAVE_LOCAL_LIBCDATA;HAVE_LOCAL_LIBCLOCALE;HAVE_LOCAL_LIBCNOTIFY;HAVE_LOCAL_LIBUNA;HAVE_LOCAL_LIBCFILE;HAVE_LOCAL_LIBCPATH;HAVE_LOCAL_LIBBFIO;HAVE_LOCAL_LIBFDATETIME;LIBMSIECF_DLL_IMPORT"
 				BasicRuntimeChecks="3"
 				SmallerTypeCheck="true"
 				RuntimeLibrary="3"
@@ -184,7 +184,15 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\msiecftools\msiecfoutput.c"
+				RelativePath="..\..\msiecftools\msiecftools_getopt.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\msiecftools\msiecftools_output.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\msiecftools\msiecftools_signal.c"
 				>
 			</File>
 		</Filter>
@@ -198,7 +206,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\msiecftools\msiecfoutput.h"
+				RelativePath="..\..\msiecftools\msiecftools_getopt.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\msiecftools\msiecftools_i18n.h"
 				>
 			</File>
 			<File
@@ -218,10 +230,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\msiecftools\msiecftools_libcsystem.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\msiecftools\msiecftools_libfdatetime.h"
 				>
 			</File>
@@ -231,6 +239,18 @@
 			</File>
 			<File
 				RelativePath="..\..\msiecftools\msiecftools_libuna.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\msiecftools\msiecftools_output.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\msiecftools\msiecftools_signal.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\msiecftools\msiecftools_unused.h"
 				>
 			</File>
 		</Filter>
