Worked on dpkg files

--- a/Makefile.am
+++ b/Makefile.am
@@ -33,13 +33,12 @@ DPKG_FILES = \
 	dpkg/compat \
 	dpkg/control \
 	dpkg/copyright \
-	dpkg/copyright.in \
 	dpkg/rules \
-	dpkg/libmsiecf.docs \
-	dpkg/libmsiecf-dev.docs \
-	dpkg/libmsiecf-python.docs \
-	dpkg/libmsiecf-python3.docs \
-	dpkg/libmsiecf-tools.docs \
+	dpkg/libmsiecf.install \
+	dpkg/libmsiecf-dev.install \
+	dpkg/libmsiecf-python.install \
+	dpkg/libmsiecf-python3.install \
+	dpkg/libmsiecf-tools.install \
 	dpkg/source/format
 
 GETTEXT_FILES = \
