--- a/libmsiecf.ini
+++ b/libmsiecf.ini
@@ -24,6 +24,7 @@ example_filename1: "index.dat"
 example_filename2: "index2.dat"
 
 [tools]
+description: "Several tools for reading MSIE Cache File (index.dat)"
 directory: "msiecftools"
 names: ["msiecfexport", "msiecfinfo"]
 
