--- a/libmsiecf.ini
+++ b/libmsiecf.ini
@@ -1,4 +1,5 @@
 [project]
+description: "libmsiecf is a library to access the Microsoft Internet Explorer (MSIE) Cache File (index.dat) files."
 name: "libmsiecf"
 status: "alpha"
 year_of_creation: "2009"
