--- a/libmsiecf/Makefile.am
+++ b/libmsiecf/Makefile.am
@@ -14,7 +14,8 @@ AM_CPPFLAGS = \
 	@LIBFGUID_CPPFLAGS@ \
 	@LIBFOLE_CPPFLAGS@ \
 	@LIBFVALUE_CPPFLAGS@ \
-	@PTHREAD_CPPFLAGS@
+	@PTHREAD_CPPFLAGS@ \
+	@LIBMSIECF_DLL_EXPORT@
 
 lib_LTLIBRARIES = libmsiecf.la
 
