--- a/libmsiecf.ini
+++ b/libmsiecf.ini
@@ -1,8 +1,8 @@
 [project]
-description: "libmsiecf is a library to access the Microsoft Internet Explorer (MSIE) Cache File (index.dat) files."
 name: "libmsiecf"
 status: "alpha"
 year_of_creation: "2009"
+data_format: "Microsoft Internet Explorer (MSIE) Cache File (index.dat) file"
 documentation_url: "https://github.com/libyal/libmsiecf/tree/master/documentation"
 features: ["debug_output"]
 
